@@ -1,3 +1,9 @@
+2000-03-29  Nick Clifton  <nickc@cygnus.com>
+
+	* config/tc-sh.h (SEG_NAME): New macro: return the name of a
+	segment.  Works for both BFD_ASSEMBLER and others.
+	(SUB_SEGMENT_ALIGN): Use SEG_NAME.
+
 2000-03-29  Nick Clifton <nickc@cygnus.com
 
 	* config/tc-arm.c (tinsns): Add "bal" instruction pattern.
